Add buttons, display, css formatting
This commit adds required divs and buttons inside the index.html. One of this is going to be the calculators' display. The new style.css is responsible for handling calculator's style. It places buttons in desired places and make them nicely visible for users.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Calculator</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.cdnfonts.com/css/digital-numbers" rel="stylesheet">
     </head>
     <body>
         <script src="script.js"></script>
@@ -14,22 +16,30 @@
                     <button id="delete">DELETE</button>
                 </div>
                 <div id="math">
-                    <button id="7">7</button>
-                    <button id="8">8</button>
-                    <button id="9">9</button>
-                    <button id="/">/</button>
-                    <button id="4">4</button>
-                    <button id="5">5</button>
-                    <button id="6">6</button>
-                    <button id="*">*</button>
-                    <button id="1">1</button>
-                    <button id="2">2</button>
-                    <button id="3">3</button>
-                    <button id="-">-</button>
-                    <button id=".">.</button>
-                    <button id="0">0</button>
-                    <button id="=">=</button>
-                    <button id="+">+</button>
+                    <div class="row">
+                        <button class="m" id="7">7</button>
+                        <button class="m" id="8">8</button>
+                        <button class="m" id="9">9</button>
+                        <button class="m" id="/">/</button>
+                    </div>
+                    <div class="row">
+                        <button class="m" id="4">4</button>
+                        <button class="m" id="5">5</button>
+                        <button class="m" id="6">6</button>
+                        <button class="m" id="*">*</button>
+                    </div>
+                    <div class="row">
+                        <button class="m" id="1">1</button>
+                        <button class="m" id="2">2</button>
+                        <button class="m" id="3">3</button>
+                        <button class="m" id="-">-</button>
+                    </div>
+                    <div class="row">
+                        <button class="m" id=".">.</button>
+                        <button class="m" id="0">0</button>
+                        <button class="m" id="=">=</button>
+                        <button class="m" id="+">+</button>
+                    </div>
                 </div>
             </div>
         </div>
