--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.cdnfonts.com/css/digital-numbers" rel="stylesheet">
     </head>
     <body>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
         <div id="calculator">
             <div id="display">0</div>
             <div id="buttons">
@@ -17,26 +17,26 @@
                 </div>
                 <div id="math">
                     <div class="row">
-                        <button class="m" id="7">7</button>
-                        <button class="m" id="8">8</button>
-                        <button class="m" id="9">9</button>
+                        <button class="printingButtons" id="7">7</button>
+                        <button class="printingButtons" id="8">8</button>
+                        <button class="printingButtons" id="9">9</button>
                         <button class="m" id="/">/</button>
                     </div>
                     <div class="row">
-                        <button class="m" id="4">4</button>
-                        <button class="m" id="5">5</button>
-                        <button class="m" id="6">6</button>
+                        <button class="printingButtons" id="4">4</button>
+                        <button class="printingButtons" id="5">5</button>
+                        <button class="printingButtons" id="6">6</button>
                         <button class="m" id="*">*</button>
                     </div>
                     <div class="row">
-                        <button class="m" id="1">1</button>
-                        <button class="m" id="2">2</button>
-                        <button class="m" id="3">3</button>
+                        <button class="printingButtons" id="1">1</button>
+                        <button class="printingButtons" id="2">2</button>
+                        <button class="printingButtons" id="3">3</button>
                         <button class="m" id="-">-</button>
                     </div>
                     <div class="row">
-                        <button class="m" id=".">.</button>
-                        <button class="m" id="0">0</button>
+                        <button class="printingButtons" id=".">.</button>
+                        <button class="printingButtons" id="0">0</button>
                         <button class="m" id="=">=</button>
                         <button class="m" id="+">+</button>
                     </div>
