--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                         <button class="printingButtons" id="7">7</button>
                         <button class="printingButtons" id="8">8</button>
                         <button class="printingButtons" id="9">9</button>
-                        <button class="m" id="/">/</button>
+                        <button class="operator" id="/">/</button>
                     </div>
                     <div class="row">
                         <button class="printingButtons" id="4">4</button>
                         <button class="printingButtons" id="5">5</button>
                         <button class="printingButtons" id="6">6</button>
-                        <button class="m" id="*">*</button>
+                        <button class="operator" id="*">*</button>
                     </div>
                     <div class="row">
                         <button class="printingButtons" id="1">1</button>
                         <button class="printingButtons" id="2">2</button>
                         <button class="printingButtons" id="3">3</button>
-                        <button class="m" id="-">-</button>
+                        <button class="operator" id="-">-</button>
                     </div>
                     <div class="row">
                         <button class="printingButtons" id=".">.</button>
                         <button class="printingButtons" id="0">0</button>
                         <button class="m" id="=">=</button>
-                        <button class="m" id="+">+</button>
+                        <button class="operator" id="+">+</button>
                     </div>
                 </div>
             </div>
